--- a/index.html
+++ b/index.html
@@ -83,3 +83,13 @@
     <script src="script.js"></script>
 </body>
 </html>
+.animated-image {
+    width: 150px;  /* Taille des images */
+    height: auto;
+    border-radius: 10px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.animated-image:hover {
+    transform: scale(1.1) rotate(5deg);
+}
